# altokepe

./: .gitignore  README.md  build_mingw.bat  run_recepcionista.bat  run_server.bat
clients/cocina/manager_chef/: CMakeLists.txt  README.md  main.cpp  resources.qrc  styles.qss
clients/cocina/manager_chef/network/: ClienteManagerApp.cpp  ClienteManagerApp.h  ClienteTCP.cpp  ClienteTCP.h
clients/cocina/manager_chef/ui/: ColumnaPedidos.cpp  ColumnaPedidos.h  TarjetaPedido.cpp  TarjetaPedido.h  TarjetaPlato.cpp  TarjetaPlato.h  VentanaManager.cpp  VentanaManager.h
clients/cocina/manager_estacion/: CMakeLists.txt  README.md  main.cpp  resources.qrc  styles.qss
clients/cocina/manager_estacion/network/: ClienteEstacionApp.cpp  ClienteEstacionApp.h  ClienteTCP.cpp  ClienteTCP.h
clients/cocina/manager_estacion/ui/: VentanaEstacion.cpp  VentanaEstacion.h  VentanaEstacionesUnificadas.cpp  VentanaEstacionesUnificadas.h
clients/cocina/network/: ClienteRecepcionista.cpp
clients/ranking/: CMakeLists.txt  README.md  main.cpp  resources.qrc  test_ranking.py
clients/ranking/network/: RankingClient.cpp  RankingClient.h
clients/ranking/repository/: JsonMenuRepository.cpp  JsonMenuRepository.h  MenuRepository.h
clients/ranking/ui/: RankingWindow.cpp  RankingWindow.h
clients/recepcionista/: CMakeLists.txt  README.md  main.cpp  resources.qrc  styles.qss
clients/recepcionista/data/: GestorPedidos.cpp  GestorPedidos.h
clients/recepcionista/facade/: RecepcionistaFacade.cpp  RecepcionistaFacade.h
clients/recepcionista/network/: ClienteRecepcionista.cpp  ClienteRecepcionista.h
clients/recepcionista/ui/: PanelMesas.cpp  PanelMesas.h  PanelPedido.cpp  PanelPedido.h  VentanaRecepcionista.cpp  VentanaRecepcionista.h
common/: ExcepcionesCommon.h
common/adapter/: AdaptadorSerializadorJSON.cpp  AdaptadorSerializadorJSON.h  ISerializador.h  MAPEO_ARCHIVOS.md
common/dataTreatment/: CrearMenu.py  menu_generado.csv
common/models/: Estados.h  InfoPlatoPrioridad.h  PedidoMesa.h  PlatoDefinicion.h  PlatoInstancia.h
common/network/: Protocolo.h  SerializadorJSON.cpp  SerializadorJSON.h
data/: menu.json  pedidos_generados.json
server/: CMakeLists.txt  LogicaNegocio.cpp  LogicaNegocio.h  LogicaNegocioHandlers.cpp  LogicaNegocioHandlers.h  ManejadorCliente.cpp  ManejadorCliente.h  README.md  Servidor.cpp  Servidor.h  main.cpp  resources.qrc  servidor.h
server/identifier/: IdentificadorCliente.cpp  IdentificadorCliente.h
server/patterns/: CommandFactory.cpp  CommandFactory.h  ICommand.h  ServerCommands.cpp  ServerCommands.h
server/repository/: MenuRepository.cpp  MenuRepository.h  PedidoRepository.cpp  PedidoRepository.h
server/state/pedido/: CanceladoState.cpp  CanceladoState.h  EnProgresoState.cpp  EnProgresoState.h  EntregadoState.cpp  EntregadoState.h  EstadoPedido.h  ListoState.cpp  ListoState.h  PendienteState.cpp  PendienteState.h
server/state/plato/: DevueltoState.cpp  DevueltoState.h  EnEsperaState.cpp  EnEsperaState.h  EnProgresoState.cpp  EnProgresoState.h  EntregadoStatePlato.cpp  EntregadoStatePlato.h  EstadoPlato.h  FinalizadoState.cpp  FinalizadoState.h  PreparandoState.cpp  PreparandoState.h
server/strategy/: EstrategiaCancelarPedido.cpp  EstrategiaCancelarPedido.h  EstrategiaConfirmarEntrega.cpp  EstrategiaConfirmarEntrega.h  EstrategiaDevolverPlato.cpp  EstrategiaDevolverPlato.h  EstrategiaFactory.cpp  EstrategiaFactory.h  EstrategiaMarcarPlatoTerminado.cpp  EstrategiaMarcarPlatoTerminado.h  EstrategiaNuevoPedido.cpp  EstrategiaNuevoPedido.h  EstrategiaPrepararPedido.cpp  EstrategiaPrepararPedido.h  IEstrategia.h
